# identicon

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  identicon.cabal
.github/workflows/: ci.yaml
Graphics/: Identicon.hs
Graphics/Identicon/: Primitive.hs
bench/: Main.hs
tests/: Spec.hs
